--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/images/vips_logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Srijan Website</title>
+    <title>INTEGRATING CLIMATE ACTION, AI, SDGs
+      AND WATER MANAGEMENT</title>
   </head>
   <body>
     <div id="root"></div>
